# create

./: .gitignore  BeocreateUniversal-v10.dspproj  BeocreateUniversal-v11.dspproj  BeocreateUniversal.dspproj  LICENSE  README.md  beocreate-4ch  beocreate-installer  beocreate-server.js  beocreate2.service  sigmareset
BeocreateConnect/: beocreate-app2018.css  beocreate-app2019.css  beosound5-test.js  dns.js  index-exp.html  index.html  main.js  main.js.bak  package-lock.json  package.json  start.js
DSP Parameter Reader/: dspreader2018.css  index.html
Documentation/: Design Guidelines.md  DesignGuidelines.md  ExtensionsIntroduction.md  ExtensionsServer.md  Interact.md  Product Identities.md  ProductIdentities.md  Sound Presets.md  SoundPresets.md
Help/: FindYourProduct.md
Legacy/: beocreate-installer  beocreate-server.js
Legacy/SigmaTcpDaemon/: CMakeLists.txt  HwCommunicationIF.h  Main.cpp  SigmaTcpServer.h  SigmaTcpTypes.h
SetupTool/: BeoCreate.nuspec  create2017.css  index.html  offline.appcache  profiles.json
SigmaClientTool/: CMakeLists.txt  Main.cpp  SigmaDataTypes.h  SigmaProtocolDataFormatter.cpp  SigmaProtocolDataFormatter.h  SigmaTcpClient.cpp  SigmaTcpClient.h
SigmaTcpDaemon/: CMakeLists.txt  EepromHandler.cpp  EepromHandler.h  HwCommunicationIF.h  Main.cpp  Mode 0_Modes.h  SigmaTcpServer.cpp  SigmaTcpServer.h  SigmaTcpTypes.h  SpiCommunication.cpp  SpiCommunication.h
sigma tcp/: CMakeLists.txt  Makefile  README  SigmaTcpServer.cpp  SigmaTcpServer.h  SpiCommunication.cpp  SpiCommunication.h  i2c.c  regmap.c  sigma_tcp.c  sigma_tcp.h  spi.c
(+373 files in other folders)
